k8s/apps/networking/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: networking
spec:
  selector:
    istio: ingressgateway
    istio.io/rev: stable
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '${SECRET_DOMAIN}'
        - '*.${SECRET_DOMAIN}'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '${SECRET_DOMAIN}'
        - '*.${SECRET_DOMAIN}'
      tls:
        credentialName: "${SECRET_DOMAIN/./-}-tls"
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
